# CompetitiveProgrammingTemplate

./: CMakeLists.txt  README.md  build_release_run.bat  build_release_run.sh
documentation/: CMakeLists.txt
standalone/: CMakeLists.txt
standalone/source/: main_thread.cpp
test/: CMakeLists.txt
